# pcmd

./: .coveragerc  .flake8  404.html  CHANGELOG.md  LICENSE  README.md  TODO  cmd.yaml  cmd.yml  codecov.yml  dev-requirements.txt  index.html  mkdocs.yml  mypy.ini  pypi.md  pyproject.toml  requirements.txt  rough_sheet.md  rough_sheet.txt  sitemap.xml
.github/workflows/: pcmd-test.yml  python-package.yml
design/: index.html
dev/: index.html
docs/: design.md  dev.md  examples.md  index.md  releases.md  user_guide.md
docs/stylesheets/: extra.css
examples/: README.md  cmd.yaml  index.html
pcmd/: __const__.py  __core__.py  __echoes__.py  __helper__.py  __init__.py  __main__.py  main.py  trial_add.py  tryout_template.py
pcmd/tryouts/: tryout_add.py  tryout_run_args.py
releases/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_pcmd.py
user_guide/: index.html
