[tool.poetry]
name = "pcmd"
version = "2.1.0"
description = "A super simple terminal command shortener."
authors = ["Jofin <jofinfab@gmail.com>"]
readme = "pypi.md"
license = "Apache-2.0"
repository = "https://github.com/j0fiN/pcmd"
keywords = ["command-line", "utilities", "cmd", "terminal", "CLI"]
classifiers =  [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities"
]

[tool.poetry.scripts]
pcmd = "pcmd.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.3.2"
PyYAML = "^5.4.1"



[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
mkdocs-material = "^7.1.5"
mypy = "^0.812"
coverage = "^5.5"
pytest-cov ="^2.12.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
